Filters and shopping cart styling are complete.
I finished styling the filter checkboxes and sliders.  Added in a sort icon which will be put in the main page. I also finished the shopping cart styling and it is now ready for functionality to be added.

--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -1,7 +1,5 @@
-@charset "UTF-8";
 body {
-  background-color: #efe6e6;
-}
+  background-color: #efe6e6; }
 
 /* AdminControls */
 .controls-container {
@@ -10,51 +8,45 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* Button style */
-}
-.controls-container .controls-button {
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: black;
-  background-color: #ccb1a7;
-  border: 2px solid #ffffff;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  text-decoration: none;
-  margin-right: 10px;
-  font-family: Times New Roman, Serif, serif;
-}
-.controls-container .controls-button:hover {
-  background-color: #A26D5D;
-  border-color: #363131;
-}
+  /* Button style */ }
+  .controls-container .controls-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: black;
+    background-color: #ccb1a7;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    margin-right: 10px;
+    font-family: Times New Roman, Serif, serif; }
+  .controls-container .controls-button:hover {
+    background-color: #A26D5D;
+    border-color: #363131; }
 
 /* AdminTable */
 .admin-head-container {
-  padding-bottom: 75px;
-}
+  padding-bottom: 75px; }
 
 .admin-body-container {
-  display: flex;
-}
+  display: flex; }
 
 .admin-table-container {
   width: 90%;
   display: flex;
   justify-content: center;
   border-radius: 5px;
-}
-.admin-table-container .admin-table-container table {
-  width: 100%;
-  border-collapse: collapse;
-  font-family: Arial, sans-serif;
-  border: 2px solid #363131;
-  border-radius: 5px;
-}
+  margin-left: 20px; }
+  .admin-table-container .admin-table-container table {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: Arial, sans-serif;
+    border: 2px solid #363131;
+    border-radius: 5px; }
 
 .admin-table-container thead {
   background-color: #A26D5D;
@@ -63,113 +55,96 @@ body {
   text-transform: capitalize;
   text-align: center;
   font-weight: bold;
-  font-family: Times New Roman, Serif, serif;
-}
+  font-family: Times New Roman, Serif, serif; }
 
 .admin-table-container thead :hover {
-  border-color: #363131;
-}
+  border-color: #363131; }
 
 .admin-table thead th,
 .admin-table-container tbody td {
   padding: 10px;
   font-size: 16px;
-  text-align: center;
-}
+  text-align: center; }
 
 .admin-table-container tbody tr {
   border-bottom: 1px solid #363131;
   background-color: #ffffff;
-  position: relative;
-}
+  position: relative; }
 
 .admin-table-container tbody tr:hover {
   background-color: #e5e3e3;
-  transition: background-color 0.6s ease;
-}
+  transition: background-color 0.6s ease; }
 
 .admin-table-container tbody tr:hover td {
   color: transparent;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .admin-table-container tbody tr:hover::after {
-  content: "🔍";
+  content: "\1F50D";
   font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
-}
+  z-index: 1; }
 
 .admin-table-container table {
   border-color: #363131;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
 
 .sortLabel:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .add-new-product {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-}
+  margin-top: 20px; }
 
 /* Filters */
 .filter-container {
   width: 300px;
   padding: 20px;
-  /* Styling for filter dropdown menus */
-}
-.filter-container .filter-buttons {
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-}
-.filter-container .filter-dropdown.open .filter-dropdown-menu {
-  display: block;
-}
-.filter-container .filter-dropdown-menu {
-  display: none;
-  top: 0;
-  left: 100%;
-  padding: 10px;
-  z-index: 1;
-}
-.filter-container .filter-dropdown-menu label {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-  font-family: Times New Roman, Serif, serif;
-  font-size: 16px;
-}
-.filter-container .filter-dropdown-toggle {
-  width: 100%;
-  background-color: #ccb1a7; /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
-  border: 1px solid #ffffff;
-  border-radius: 3px;
-  padding: 8px 12px;
-  cursor: pointer;
-  transition: background-color 0.8ms ease;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-family: Times New Roman, Serif, serif;
-  font-size: 14px;
-  font-weight: bold;
-}
-.filter-container .filter-dropdown-toggle:hover {
-  background-color: #ffffff;
-  border-color: #363131;
-}
+  /* Styling for filter dropdown menus */ }
+  .filter-container .filter-buttons {
+    margin: 10px;
+    display: flex;
+    justify-content: center; }
+  .filter-container .filter-dropdown.open .filter-dropdown-menu {
+    display: block; }
+  .filter-container .filter-dropdown-menu {
+    display: none;
+    top: 0;
+    left: 100%;
+    padding: 10px;
+    z-index: 1; }
+  .filter-container .filter-dropdown-menu label {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    font-family: Times New Roman, Serif, serif;
+    font-size: 16px; }
+  .filter-container .filter-dropdown-toggle {
+    width: 100%;
+    background-color: #ccb1a7;
+    /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
+    border: 1px solid #ffffff;
+    border-radius: 3px;
+    padding: 8px 12px;
+    cursor: pointer;
+    transition: background-color 0.8ms ease;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: Times New Roman, Serif, serif;
+    font-size: 14px;
+    font-weight: bold; }
+  .filter-container .filter-dropdown-toggle:hover {
+    background-color: #ffffff;
+    border-color: #363131; }
 
-.filter-dropdown-toggle > input[type=checkbox i] {
-  border-style: outset;
-}
+.filter-dropdown-toggle > input[type="checkbox" i] {
+  border-style: outset; }
 
 .filter-buttons > button {
   background-color: #ccb1a7;
@@ -183,17 +158,70 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
   text-decoration: none;
-  font-family: Times New Roman, Serif, serif;
-}
+  font-family: Times New Roman, Serif, serif; }
 
 .filter-buttons > button:hover {
   background-color: #A26D5D;
-  border-color: #363131;
-}
+  border-color: #363131; }
 
+/*
+  Checkbox styling
+
+ */
+.filter-checkboxes {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.filter-checkboxes input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: white; }
+
+.filter-checkboxes:hover input ~ .checkmark {
+  background-color: #ccc; }
+
+.filter-checkboxes:checked ~ .checkmark {
+  background-color: #363131; }
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+.filter-checkboxes input:checked ~ .checkmark:after {
+  display: block; }
+
+.filter-checkboxes .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid #363131;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+/* */
 .apply-button {
-  margin-top: 20px;
-}
+  margin-top: 20px; }
 
 .apply-button button {
   background-color: #007bff;
@@ -202,25 +230,21 @@ body {
   border-radius: 3px;
   padding: 10px 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+  transition: background-color 0.3s ease; }
 
 .apply-button button:hover {
-  background-color: #0056b3;
-}
+  background-color: #0056b3; }
 
 /* Admin product edit */
 .admin-edit-product {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
 
 .admin-create-product {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
 
 .create-form,
 .edit-form {
@@ -229,229 +253,245 @@ body {
   border: 1px solid #ccc;
   border-radius: 15px;
   background-color: #f9f9f9;
-  margin-bottom: 350px;
-}
+  margin-bottom: 350px; }
 
 .edit-form label {
   font-size: 30px;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .form-controls {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-}
+  justify-content: space-around; }
 
 .create-input,
 .edit-input {
   margin-bottom: 15px;
   font-size: 20px;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .form-label {
   font-size: 20px;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .create-input input,
 .edit-input input {
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 4px;
-}
+  border-radius: 4px; }
 
-.edit-input input[type=text] {
-  width: calc(100% - 22px); /* Adjusted to account for padding and border */
+.edit-input input[type="text"] {
+  width: calc(100% - 22px);
+  /* Adjusted to account for padding and border */
   font-size: 20px;
-  font-weight: lighter;
-}
+  font-weight: lighter; }
 
-.create-input input[type=text]:hover,
-.edit-input input[type=text]:hover {
-  cursor: pointer;
-}
+.create-input input[type="text"]:hover,
+.edit-input input[type="text"]:hover {
+  cursor: pointer; }
 
 .size-selector {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .size-option input {
   width: 13px;
   height: 13px;
-  margin-right: 5px;
-}
+  margin-right: 5px; }
 
 .err-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
 
 .err-container div {
-  width: 80%;
-}
+  width: 80%; }
 
 .err {
   color: red;
-  font-size: 14px;
-}
+  font-size: 14px; }
 
 .create-input input.invalid-input,
 .edit-input input.invalid-input {
-  border: 2px solid red;
-}
+  border: 2px solid red; }
 
 .size-selector.invalid-input {
-  border: 2px solid red;
-}
+  border: 2px solid red; }
 
-.edit-input input [type=text]:hover {
-  cursor: pointer;
-}
+.edit-input input [type="text"]:hover {
+  cursor: pointer; }
 
 .size-selector {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .size-option input {
   width: 13px;
   height: 13px;
-  margin-right: 5px;
-}
+  margin-right: 5px; }
 
 .err-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
 
 .err-container div {
-  width: 80%;
-}
+  width: 80%; }
 
 .err {
   color: red;
-  font-size: 14px;
-}
+  font-size: 14px; }
 
 .create-input input.invalid-input,
 .edit-input input.invalid-input {
-  border: 2px solid red;
-}
+  border: 2px solid red; }
 
 .size-selector.invalid-input {
-  border: 2px solid red;
-}
+  border: 2px solid red; }
 
-.stock-filter,
+/*
+  Price and stock slider
+  https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_rangeslider_round
+ */
 .price-filter {
-  margin-bottom: 20px;
-}
+  width: 100%; }
+
+.price-slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s; }
+
+.price-slider:hover {
+  opacity: 1; }
+
+.price-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #363131;
+  cursor: pointer; }
+
+.price-slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #363131;
+  cursor: pointer; }
 
 .stock-filter h4,
 .price-filter h4 {
   margin-bottom: 10px;
   font-size: 16px;
   font-family: Times New Roman, Serif, serif;
-  color: #333;
-}
+  color: #333; }
 
-.stock-slider,
-.price-slider {
+.stock-filter {
+  width: 100%; }
+
+.stock-slider {
+  -webkit-appearance: none;
   width: 100%;
-  height: 10px;
+  height: 15px;
   border-radius: 5px;
-  background-color: #ffffff;
+  background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  transition: opacity 0.15s ease-in-out;
-}
+  -webkit-transition: .2s;
+  transition: opacity .2s; }
 
-.stock-slider::-webkit-slider-thumb,
-.price-slider::-webkit-slider-thumb {
-  width: 20px;
-  height: 20px;
+.stock-slider:hover {
+  opacity: 1; }
+
+.stock-slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
-  background-color: #007bff; /* Primary color */
-  cursor: pointer;
-}
+  background: #363131;
+  cursor: pointer; }
 
-.stock-slider::-moz-range-thumb,
-.price-slider::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
+.stock-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
-  background-color: #007bff; /* Primary color */
-  cursor: pointer;
-}
+  background-color: #363131;
+  cursor: pointer; }
 
+.stock-filter h4,
+.price-filter h4 {
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-family: Times New Roman, Serif, serif;
+  color: #333; }
+
+/*End of slider styling*/
 .testing-link-container {
   display: flex;
   justify-content: center;
   margin: 50px;
   padding: 20px;
-  border: black solid 2px;
-}
+  border: black solid 2px; }
 
 .testing-header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
 
 .red-text {
   color: red;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .filter-button {
   display: flex;
   padding-left: 20px;
   align-items: center;
   flex-direction: column;
-  padding-right: 20px;
-}
+  padding-right: 20px; }
 
 .filter-button > h1 {
   font-size: 20px;
-  font-family: Times New Roman, Serif, serif;
-}
+  font-family: Times New Roman, Serif, serif; }
 
 .filter-icon:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .filter-icon > img {
   width: 55px;
-  height: 55px;
-}
+  height: 55px; }
 
 .filter-container {
   width: 150px;
   border: none;
-}
+  position: absolute; }
 
 .filter-container > fieldset {
   position: relative;
   border: none;
-}
+  padding-top: 100px; }
 
 .filter-box {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
-input[type=checkbox] {
-  background-color: black;
-}
+.sort-icon > img {
+  width: 35px;
+  height: 35px; }
 
-/*
-    Styling for checkboxes from w3schools
-    https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_checkbox
- */
+.sort-button > h1 {
+  font-size: 20px;
+  font-family: Times New Roman, Serif, serif; }
+
+.sort-button {
+  display: flex;
+  flex-direction: column; }
 
 /*# sourceMappingURL=Admin.css.map */
