--- a/client/src/Admin.scss
+++ b/client/src/Admin.scss
@@ -58,6 +58,7 @@ body {
   display: flex;
   justify-content: center;
   border-radius: 5px;
+  margin-left: 20px;
 
   .admin-table-container table {
     width: 100%;
@@ -219,6 +220,71 @@ body {
   background-color: #A26D5D;
   border-color: $grey-border;
 }
+/*
+  Checkbox styling
+
+ */
+
+.filter-checkboxes {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.filter-checkboxes input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: white;
+}
+
+.filter-checkboxes:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+.filter-checkboxes:checked ~ .checkmark {
+  background-color: #363131;
+}
+
+.checkmark:after{
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.filter-checkboxes input:checked ~ .checkmark:after{
+  display: block;
+}
+
+.filter-checkboxes .checkmark:after{
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid #363131;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* */
 
 .apply-button {
   margin-top: 20px;
@@ -240,8 +306,8 @@ body {
 
 
 /* Admin product edit */
-.admin-edit-product  {
-  display:flex;
+.admin-edit-product {
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
@@ -285,6 +351,7 @@ body {
   font-size: 20px;
   font-weight: bold;
 }
+
 .create-input input,
 .edit-input input {
   padding: 10px;
@@ -297,17 +364,18 @@ body {
   font-size: 20px;
   font-weight: lighter;
 }
+
 .create-input input[type="text"]:hover,
 .edit-input input[type="text"]:hover {
   cursor: pointer;
 }
 
 
-
 .size-selector {
   display: flex;
   flex-direction: column;
 }
+
 .size-option input {
   width: 13px;
   height: 13px;
@@ -320,32 +388,25 @@ body {
   align-items: center;
 
 }
+
 .err-container div {
   width: 80%;
 
 }
+
 .err {
   color: red;
   font-size: 14px;
 }
+
 .create-input input.invalid-input,
 .edit-input input.invalid-input {
   border: 2px solid red;
 }
+
 .size-selector.invalid-input {
   border: 2px solid red;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 .edit-input input [ type = "text" ]:hover {
@@ -390,9 +451,46 @@ body {
   border: 2px solid red;
 }
 
-.stock-filter,
+/*
+  Price and stock slider
+  https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_rangeslider_round
+ */
 .price-filter {
-  margin-bottom: 20px;
+  width: 100%;
+}
+
+.price-slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.price-slider:hover {
+  opacity: 1;
+}
+
+.price-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #363131;
+  cursor: pointer;
+}
+
+.price-slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #363131;
+  cursor: pointer;
 }
 
 .stock-filter h4,
@@ -403,34 +501,53 @@ body {
   color: #333;
 }
 
-.stock-slider,
-.price-slider {
+.stock-filter {
   width: 100%;
-  height: 10px;
+}
+
+.stock-slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
   border-radius: 5px;
-  background-color: $white;
+  background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  transition: opacity 0.15s ease-in-out;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
 }
 
-.stock-slider::-webkit-slider-thumb,
-.price-slider::-webkit-slider-thumb {
-  width: 20px;
-  height: 20px;
+.stock-slider:hover {
+  opacity: 1;
+}
+
+.stock-slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
-  background-color: #007bff; /* Primary color */
+  background: #363131;
   cursor: pointer;
 }
 
-.stock-slider::-moz-range-thumb,
-.price-slider::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
+.stock-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
-  background-color: #007bff; /* Primary color */
+  background-color: #363131;
   cursor: pointer;
 }
+
+.stock-filter h4,
+.price-filter h4 {
+  margin-bottom: 10px;
+  font-size: $title_font_size;
+  font-family: $title_font;
+  color: #333;
+}
+
+/*End of slider styling*/
 
 .testing-link-container {
   display: flex;
@@ -468,7 +585,6 @@ body {
   cursor: pointer;
 }
 
-
 .filter-icon > img {
   width: 55px;
   height: 55px;
@@ -477,11 +593,13 @@ body {
 .filter-container {
   width: 150px;
   border: none;
+  position: absolute;
 }
 
 .filter-container > fieldset {
   position: relative;
   border: none;
+  padding-top: 100px
 }
 
 .filter-box {
@@ -489,57 +607,21 @@ body {
   flex-direction: column;
 }
 
-input[type="checkbox"] {
-  background-color: black;
+.sort-icon > img{
+  width: 35px;
+  height: 35px;
 }
 
+.sort-button > h1{
+    font-size: 20px;
+    font-family: Times New Roman, Serif, serif;
+}
 
-/*
-    Styling for checkboxes from w3schools
-    https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_checkbox
- */
-//
-//.checkbox-label {
-//  position: relative;
-//  display: flex;
-//  align-items: center;
-//}
-//
-//.checkbox-label  input {
-//  position: absolute;
-//  opacity: 0;
-//  cursor: pointer;
-//  height: 0;
-//  width: 0;
-//}
-//
-//.check {
-//  position: relative;
-//  display: inline-block;
-//  height: 25px;
-//  width: 25px;
-//  background-color: #eee;
-//}
-//
-//.filter-dropdown-menu input:checked + .check {
-//  background-color: #A26D5D;
-//}
-//
-//.check:after {
-//  content: "";
-//  position: absolute;
-//  display: none;
-//}
-//
-//.filter-dropdown-menu input:checked + .check:after {
-//  content: "";
-//  position: absolute;
-//  left: 9px;
-//  top: 5px;
-//  width: 5px;
-//  height: 10px;
-//  border: solid white;
-//  border-width: 0 3px 3px 0;
-//  transform: rotate(45deg);
-//  display: block;
-//}
+.sort-button{
+  display: flex;
+  flex-direction: column;
+}
+
+.test{
+
+}
