--- a/client/src/AccountPage.scss
+++ b/client/src/AccountPage.scss
@@ -8,6 +8,7 @@ $title_font: Times New Roman, Serif, serif;
 
 .bag-container {
 }
+
 .account-head-container {
   position: fixed;
   padding-top: 0;
@@ -20,7 +21,8 @@ $title_font: Times New Roman, Serif, serif;
   padding-top: 150px;
   padding-bottom: 100px;
 }
-.account-box{
+
+.account-box {
   //padding-top: 20px;
   width: 700px;
   height: 450px;
@@ -35,43 +37,36 @@ $title_font: Times New Roman, Serif, serif;
 }
 
 .login-box,
-.register-box{
-  padding: 40px;
+.register-box {
+  padding: 70px;
+  //padding: 40px;
 }
 
-.login-box,
-.register-box > h1{
-  margin: 0;
+.login-box > h1,
+.register-box > h1 {
+  //margin: 0;
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 24px;
+  //margin-top: 0;
   //padding-left: 20px;
 }
 
-.login-box > h2 {
-  font-size: 14px;
+.login-box > label{
+  font-size: 16px;
   font-weight: normal;
   font-family: Times New Roman, Serif, serif;
   //padding-left: 20px;
 }
 
-.signIn-btn > button{
+ button {
   background-color: #ccb1a7;
   border: 2px solid $white;
   font-family: $title-font;
-  font-size: $title_font_size;
-  padding: 5px 10px;
+  font-size: 16px;
+  padding: 5px 7px;
   border-radius: 5px;
-}
-
-button{
-  background-color: #ccb1a7;
-  border: 2px solid $white;
-  font-family: $title-font;
-  font-size: $title_font_size;
-  padding: 5px 10px;
-  border-radius: 5px;
-}
+ }
 
 button:hover {
   background-color: #A26D5D;
@@ -84,7 +79,7 @@ button:hover {
     https://www.w3schools.com/howto/howto_css_vertical_line.asp
  */
 
-.vl{
+.vl {
   border-left: 3px solid #d4c7c7c2;
   height: 425px;
   //position: relative;
@@ -93,8 +88,30 @@ button:hover {
   top: 0;
 }
 
-.login-box > input{
+
+.login-box > input {
   border-color: white;
   border-radius: 0;
   border-style: outset;
+  height: 20px;
+  width: 200px;
+}
+
+.no-account-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 200px;
+}
+
+.no-account-container > h1 {
+  font-family: Times New Roman, Serif, serif;
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 50px;
+}
+
+.register-btn {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
