--- a/client/src/Admin.scss
+++ b/client/src/Admin.scss
@@ -678,6 +678,14 @@ body {
   display: flex;
   justify-content: center;
 }
+.profile-container {
+  display: flex;
+  justify-content: space-around;
+  max-width: 500px;
+  border: solid black 2px;
+
+}
+
 
 #profilePhoto{
   width:100px;
