--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -587,7 +587,11 @@ body {
   flex-direction: column;
 }
 
-div h1,
+.profile-view h1 {
+  display: flex;
+  justify-content: center;
+}
+
 .user-profile {
   display: flex;
   justify-content: center;
@@ -595,11 +599,47 @@ div h1,
 
 .profile-container {
   background-color: white;
-  display: flex;
-  justify-content: space-around;
   max-width: 700px;
   width: 700px;
   border: solid black 2px;
+}
+.profile-container .profile-photo {
+  display: flex;
+  justify-content: center;
+}
+.profile-container .profile-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: solid black 1px;
+}
+.profile-container .profile-details .right {
+  width: 50%;
+  padding: 20px;
+}
+.profile-container .profile-details .right h3 {
+  display: flex;
+  justify-content: center;
+}
+.profile-container .profile-details .right h4 {
+  display: flex;
+}
+.profile-container .profile-details .right span {
+  font-weight: lighter;
+  margin-left: 10px;
+}
+.profile-container .profile-details .right p {
+  border-bottom: solid gray 1px;
+  border-top: solid gray 1px;
+  width: 100%;
+}
+.profile-container .profile-details .left {
+  width: 50%;
+  padding: 20px;
+}
+.profile-container .profile-details span {
+  font-weight: lighter;
+  margin-left: 10px;
 }
 
 .profile-span {
