--- a/client/src/css/ShoppingCart.css
+++ b/client/src/css/ShoppingCart.css
@@ -16,7 +16,6 @@
   height: 450px;
   border-radius: 5px;
   box-shadow: 20px 20px 50px grey;
-  position: relative;
   border-color: #A26D5D;
   border-style: outset; }
 
@@ -35,8 +34,10 @@
 .edit-bag {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding-bottom: 75px; }
+  justify-content: space-between; }
+
+.edit-bag > h2 {
+  margin-bottom: 40px; }
 
 .bag > h1 {
   font-size: 16px;
@@ -98,11 +99,8 @@
 .sub-container {
   display: flex;
   flex-direction: row;
-  /* Change to row */
   align-items: center;
-  /* Center vertically */
-  justify-content: space-between;
-  /* Spacing between titles */ }
+  justify-content: space-between; }
 
 /*
     Quantity styling
@@ -139,9 +137,6 @@
 
 .add-btn {
   margin-left: 7.5px; }
-
-.edit-bag > h2 {
-  margin-bottom: 40px; }
 
 .minus-btn {
   margin-right: 7.5px; }
