--- a/client/src/css/AddAddress.css
+++ b/client/src/css/AddAddress.css
@@ -1,3 +1,45 @@
+.create-address {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.create-address .buttons {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
 
+.address-form {
+  width: 40%;
+  padding: 30px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  background-color: #f9f9f9;
+  margin-bottom: 350px;
+}
+
+.address-input-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.address-input-container .address-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.address-input-container .address-input label {
+  font-weight: lighter;
+}
+.address-input-container .address-input input {
+  border-style: none;
+  margin-left: 20px;
+}
+.address-input-container .address-input .red-text {
+  font-size: 15px;
+}
+.address-input-container .address-input .address-input input[type=text]:hover {
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=AddAddress.css.map */
