--- a/client/src/css/RegisterPage.css
+++ b/client/src/css/RegisterPage.css
@@ -5,7 +5,6 @@
 .register-container {
   display: flex;
   justify-content: center;
-  align-items: center;
   padding-top: 150px;
   padding-bottom: 100px; }
 
@@ -16,7 +15,10 @@
   box-shadow: 20px 20px 50px grey;
   border-color: #A26D5D;
   border-style: outset;
-  position: relative; }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .register-container input[type="text"],
 .register-container input[type="email"],
@@ -31,22 +33,18 @@
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
   font-size: 24px;
-  margin-top: 30px;
   display: flex;
   justify-content: center; }
 
-.register-form > label {
-  margin-right: 50px; }
+.register-form {
+  display: flex;
+  flex-direction: row; }
 
 .error-message {
-  width: 60%;
   text-align: left;
-  font-size: 15px;
+  font-size: 14px;
   color: red;
   padding: 10px; }
-
-.password-error-container {
-  width: 60%; }
 
 .password-error-container div {
   text-align: left;
@@ -62,7 +60,7 @@
   padding: 5px 7px;
   border-radius: 5px; }
 
-.submit-register > button {
+.submit-btn {
   background-color: #ccb1a7;
   border: 2px solid #ffffff;
   font-family: Times New Roman, Serif, serif;
@@ -70,30 +68,23 @@
   padding: 5px 7px;
   border-radius: 5px; }
 
+.submit-btn:hover {
+  background-color: #A26D5D;
+  border-color: #363131;
+  cursor: pointer; }
+
 .logout {
   margin-bottom: 30px; }
 
-.register-section1 {
-  float: left;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  margin-left: 40px; }
-
-.register-section2 {
-  float: right;
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  padding-right: 20px; }
-
-.register-buttons {
-  display: flex;
-  flex-direction: column;
+.register-btn-container {
   position: absolute;
   bottom: 20px;
-  right: 20px;
-  margin-bottom: 70px; }
+  left: 20px; }
+
+.submit-btn-container {
+  position: absolute;
+  bottom: 25px;
+  right: 20px; }
 
 .select-profile-image {
   display: flex;
@@ -112,5 +103,23 @@
 .register-section2 > label {
   font-size: 16px;
   font-family: Times New Roman, Serif, serif; }
+
+.register-section1 {
+  padding-right: 40px; }
+
+.register-section2 {
+  padding-left: 40px; }
+
+.register-section1,
+.register-section2 {
+  padding: 50px;
+  flex-direction: column; }
+
+.vl {
+  border-left: 3px solid #d4c7c7c2;
+  height: 360px;
+  left: 50%;
+  margin-left: -3px;
+  top: 0; }
 
 /*# sourceMappingURL=RegisterPage.css.map */
