--- a/client/src/AccountPage.scss
+++ b/client/src/AccountPage.scss
@@ -88,6 +88,7 @@ button:hover {
   top: 0;
 }
 
+
 .login-box > input {
   border-color: white;
   border-radius: 0;
@@ -100,13 +101,14 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 175px;
+  margin-bottom: 200px;
 }
 
 .no-account-container > h1 {
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
   font-size: 24px;
+  margin-top: 50px;
 }
 
 .register-btn {
