--- a/client/src/RegisterPage.scss
+++ b/client/src/RegisterPage.scss
@@ -11,7 +11,7 @@ $title_font: Times New Roman, Serif, serif;
 .register-container {
   display: flex;
   justify-content: center;
-  //align-items: center;
+  align-items: center;
   padding-top: 150px;
   padding-bottom: 100px;
 }
@@ -24,10 +24,10 @@ $title_font: Times New Roman, Serif, serif;
   border-color: #A26D5D;
   border-style: outset;
   position: relative;
-  display: flex;
+  //display: flex;
   //flex-direction: row;
-  flex-direction: column;
-  align-items: center;
+  //flex-direction: column;
+  //align-items: center;
 }
 
 .register-container input[type="text"],
@@ -44,6 +44,7 @@ $title_font: Times New Roman, Serif, serif;
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
   font-size: 24px;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
 }
@@ -55,11 +56,8 @@ $title_font: Times New Roman, Serif, serif;
 //  align-items: center;
 //}
 
-.register-form {
-  display: flex;
-  flex-direction: row;
-  //justify-content: center;
-  //padding: 70px;
+.register-form,
+.login-form {
   //display: flex;
   //flex-direction: column;
   //align-items: center;
@@ -70,18 +68,25 @@ $title_font: Times New Roman, Serif, serif;
   //background: #8c8787;
 }
 
-//.register-form > label {
-//  margin-right: 50px;
-//}
+.register-form > label {
+  margin-right: 50px;
+}
 
 .error-message {
-  //width: 60%;
+  width: 60%;
   text-align: left;
-  font-size: 14px;
+  font-size: 15px;
   color: red;
   //background-color: white;
   padding: 10px;
   //border-radius: 20px;
+}
+
+.password-error-container {
+  //background-color: white;
+  width: 60%;
+  //border-radius: 20px;
+  //padding: 10px;
 }
 
 .password-error-container div {
@@ -93,6 +98,7 @@ $title_font: Times New Roman, Serif, serif;
   //border-radius: 20px;
 }
 
+
 .register-buttons > button {
   background-color: #ccb1a7;
   border: 2px solid $white;
@@ -102,7 +108,7 @@ $title_font: Times New Roman, Serif, serif;
   border-radius: 5px;
 }
 
-.submit-btn {
+.submit-register > button {
   background-color: #ccb1a7;
   border: 2px solid $white;
   font-family: $title-font;
@@ -111,28 +117,43 @@ $title_font: Times New Roman, Serif, serif;
   border-radius: 5px;
 }
 
-.submit-btn:hover {
-  background-color: #A26D5D;
-  border-color: $grey-border;
-  cursor: pointer;
-}
-
 .logout {
   margin-bottom: 30px;
 }
 
+.register-section1,
+.register-section2 {
 
-
-.register-btn-container {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+  //display: flex;
+  //flex-direction: column;
+  //padding: 70px;
 }
 
-.submit-btn-container {
+.register-section1 {
+  float: left;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+}
+
+.register-section2 {
+  float: right;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  padding-right: 20px;
+}
+
+.register-buttons {
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  bottom: 25px;
+  bottom: 20px;
   right: 20px;
+  margin-bottom: 70px;
+  //margin-right: 150px;
+  //margin-right: 20px;
 }
 
 .select-profile-image {
@@ -145,37 +166,13 @@ $title_font: Times New Roman, Serif, serif;
   margin-left: 40px;
 }
 
-.select-profile-image > label {
+.select-profile-image > label{
   font-size: 16px;
   font-family: Times New Roman, Serif, serif;
 }
 
 .register-section1 > label,
-.register-section2 > label {
+.register-section2 > label{
   font-size: 16px;
   font-family: Times New Roman, Serif, serif;
 }
-
-.register-section1 {
-  padding-right: 40px;
-}
-
-.register-section2 {
-  padding-left: 40px;
-}
-
-.register-section1,
-.register-section2 {
-  padding: 50px;
-  flex-direction: column;
-}
-
-.vl {
-  border-left: 3px solid #d4c7c7c2;
-  height: 360px;
-  //position: relative;
-  left: 50%;
-  margin-left: -3px;
-  top: 0;
-}
-
