--- a/client/src/ShoppingCart.scss
+++ b/client/src/ShoppingCart.scss
@@ -6,6 +6,8 @@ $grey-border: #363131;
 $title_font_size: 16px;
 $title_font: Times New Roman, Serif, serif;
 
+.bag-container {
+}
 
   .shopping-bag-head-container {
     position: fixed;
@@ -20,20 +22,23 @@ $title_font: Times New Roman, Serif, serif;
     padding-bottom: 100px;
   }
 
-    .bag-box {
-      padding-top: 20px;
-      width: 700px;
-      height: 450px;
-      //background-color: #adc9b8;
-      border-radius: 5px;
-      /* Box shadow from w3 schools*/
-      box-shadow: 20px 20px 50px grey;
-      position: relative;
-      border-color: #A26D5D;
-      border-style: outset;
-      display: flex;
-      flex-direction: column;
-    }
+
+/* Box shadow from w3 schools*/
+.bag-box {
+  padding-top: 20px;
+  width: 700px;
+  height: 450px;
+  border-radius: 5px;
+  box-shadow: 20px 20px 50px grey;
+  //position: relative;
+  border-color: #A26D5D;
+  border-style: outset;
+  //display: flex;
+  //flex-direction: row;
+  //align-items: center;
+  //justify-content: space-between;
+}
+
 
 .bag-box h1{
   margin: 0;
@@ -58,7 +63,22 @@ $title_font: Times New Roman, Serif, serif;
 
 
 .edit-bag > h2{
-  margin-bottom: 150px;
+  margin-bottom: 40px;
+}
+
+//.edit-bag > h2 {
+//  padding-left: 300px;
+//  padding-bottom: 120px;
+//}
+
+.bag > h1 {
+  font-size: $title_font_size;
+  font-family: $title_font;
+}
+
+.bag > h2 {
+  font-size: $title_font_size;
+  font-family: $title_font;
 }
 
 .tshirt-container {
