--- a/client/src/css/AccountPage.css
+++ b/client/src/css/AccountPage.css
@@ -69,12 +69,13 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 175px; }
+  margin-bottom: 200px; }
 
 .no-account-container > h1 {
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
-  font-size: 24px; }
+  font-size: 24px;
+  margin-top: 50px; }
 
 .register-btn {
   margin-top: 30px;
