--- a/client/src/css/RegisterPage.css
+++ b/client/src/css/RegisterPage.css
@@ -5,6 +5,7 @@
 .register-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding-top: 150px;
   padding-bottom: 100px; }
 
@@ -15,10 +16,7 @@
   box-shadow: 20px 20px 50px grey;
   border-color: #A26D5D;
   border-style: outset;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
+  position: relative; }
 
 .register-container input[type="text"],
 .register-container input[type="email"],
@@ -33,18 +31,22 @@
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
   font-size: 24px;
+  margin-top: 30px;
   display: flex;
   justify-content: center; }
 
-.register-form {
-  display: flex;
-  flex-direction: row; }
+.register-form > label {
+  margin-right: 50px; }
 
 .error-message {
+  width: 60%;
   text-align: left;
-  font-size: 14px;
+  font-size: 15px;
   color: red;
   padding: 10px; }
+
+.password-error-container {
+  width: 60%; }
 
 .password-error-container div {
   text-align: left;
@@ -60,7 +62,7 @@
   padding: 5px 7px;
   border-radius: 5px; }
 
-.submit-btn {
+.submit-register > button {
   background-color: #ccb1a7;
   border: 2px solid #ffffff;
   font-family: Times New Roman, Serif, serif;
@@ -68,23 +70,30 @@
   padding: 5px 7px;
   border-radius: 5px; }
 
-.submit-btn:hover {
-  background-color: #A26D5D;
-  border-color: #363131;
-  cursor: pointer; }
-
 .logout {
   margin-bottom: 30px; }
 
-.register-btn-container {
+.register-section1 {
+  float: left;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px; }
+
+.register-section2 {
+  float: right;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  padding-right: 20px; }
+
+.register-buttons {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   bottom: 20px;
-  left: 20px; }
-
-.submit-btn-container {
-  position: absolute;
-  bottom: 25px;
-  right: 20px; }
+  right: 20px;
+  margin-bottom: 70px; }
 
 .select-profile-image {
   display: flex;
@@ -103,23 +112,5 @@
 .register-section2 > label {
   font-size: 16px;
   font-family: Times New Roman, Serif, serif; }
-
-.register-section1 {
-  padding-right: 40px; }
-
-.register-section2 {
-  padding-left: 40px; }
-
-.register-section1,
-.register-section2 {
-  padding: 50px;
-  flex-direction: column; }
-
-.vl {
-  border-left: 3px solid #d4c7c7c2;
-  height: 360px;
-  left: 50%;
-  margin-left: -3px;
-  top: 0; }
 
 /*# sourceMappingURL=RegisterPage.css.map */
