--- a/client/src/UserProfile.scss
+++ b/client/src/UserProfile.scss
@@ -26,7 +26,10 @@
     justify-content: center;
     border: solid black 1px;
 
-
+    span {
+      font-weight: lighter;
+      margin-left: 10px;
+    }
 
     .right{
       width: 50%;
@@ -53,9 +56,13 @@
       width: 50%;
       padding: 20px;
     }
-    span {
-      font-weight: lighter;
-      margin-left: 10px;
+  }
+
+  .profile-history {
+    h2 {
+      display:flex;
+      flex-direction: row;
+      justify-content: center;
     }
   }
 }
