--- a/client/src/css/UserProfile.css
+++ b/client/src/css/UserProfile.css
@@ -24,6 +24,10 @@
   justify-content: center;
   border: solid black 1px;
 }
+.profile-container .profile-details span {
+  font-weight: lighter;
+  margin-left: 10px;
+}
 .profile-container .profile-details .right {
   width: 50%;
   padding: 20px;
@@ -48,9 +52,10 @@
   width: 50%;
   padding: 20px;
 }
-.profile-container .profile-details span {
-  font-weight: lighter;
-  margin-left: 10px;
+.profile-container .profile-history h2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=UserProfile.css.map */
