--- a/client/src/css/AccountPage.css
+++ b/client/src/css/AccountPage.css
@@ -1,13 +1,15 @@
 .account-head-container {
   position: fixed;
-  padding-top: 0; }
+  padding-top: 0;
+}
 
 .account-container {
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 150px;
-  padding-bottom: 100px; }
+  padding-bottom: 100px;
+}
 
 .account-box {
   width: 700px;
@@ -17,22 +19,26 @@
   border-color: #A26D5D;
   border-style: outset;
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
 .login-box,
 .register-box {
-  padding: 70px; }
+  padding: 70px;
+}
 
 .login-box > h1,
 .register-box > h1 {
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
-  font-size: 24px; }
+  font-size: 24px;
+}
 
 .login-box > label {
   font-size: 16px;
   font-weight: normal;
-  font-family: Times New Roman, Serif, serif; }
+  font-family: Times New Roman, Serif, serif;
+}
 
 button {
   background-color: #ccb1a7;
@@ -40,44 +46,51 @@ button {
   font-family: Times New Roman, Serif, serif;
   font-size: 16px;
   padding: 5px 7px;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 button:hover {
   background-color: #A26D5D;
   border-color: #363131;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 /*
     A vertical line between the login section and the register/guest
     https://www.w3schools.com/howto/howto_css_vertical_line.asp
  */
 .vl {
-  border-left: 3px solid #d4c7c7c2;
+  border-left: 3px solid rgba(212, 199, 199, 0.7607843137);
   height: 425px;
   left: 50%;
   margin-left: -3px;
-  top: 0; }
+  top: 0;
+}
 
 .login-box > input {
   border-color: white;
   border-radius: 0;
   border-style: outset;
   height: 20px;
-  width: 200px; }
+  width: 200px;
+}
 
 .no-account-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 175px; }
+  margin-bottom: 175px;
+}
 
 .no-account-container > h1 {
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
-  font-size: 24px; }
+  font-size: 24px;
+}
 
 .register-btn {
   margin-top: 30px;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+}
 
 /*# sourceMappingURL=AccountPage.css.map */
