--- a/client/src/AddAddress.scss
+++ b/client/src/AddAddress.scss
@@ -1,4 +1,4 @@
-.create-address {
+.address-container{
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -19,11 +19,15 @@
   margin-bottom: 350px;
 }
 
-.address-input-container {
+.input-container {
   display:flex;
   flex-direction: row;
   justify-content: center;
 
+  .address-input input.invalid-input {
+    border-bottom: 1px solid red;
+    border-top: 1px solid red;
+  }
   .address-input {
     padding: 10px;
     border: 1px solid #ccc;
@@ -39,9 +43,9 @@
       font-size: 15px;
     }
 
-  .address-input input[type="text"]:hover {
-    cursor: pointer;
-  }
+    .address-input input[type="text"]:hover {
+      cursor: pointer;
+    }
 
   }
 }
