--- a/client/src/UserProfile.scss
+++ b/client/src/UserProfile.scss
@@ -51,6 +51,10 @@
         width: 100%;
       }
 
+      .lighter-text {
+        font-weight: lighter;
+      }
+
     }
     .left {
       width: 50%;
