Update to Returns & Sizes
Very basic returns page set up

More options available when creating a product
Apply these changes to edit product next

--- a/client/src/Footer.scss
+++ b/client/src/Footer.scss
@@ -90,3 +90,10 @@ $title_font: Times New Roman, Serif, serif;
   margin-left: 65px;
   font-family: Times New Roman, Serif, serif;
 }
+
+.returns-button:hover{
+  cursor: pointer;
+  text-decoration: underline;
+  position: relative;
+  transform: scale(1.1); // scale(1.1) = scale this to 110% its original size
+}
