--- a/client/src/css/AddAddress.css
+++ b/client/src/css/AddAddress.css
@@ -1,13 +1,11 @@
 .address-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
-.address-container .buttons {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-}
+  align-items: center; }
+  .address-container .buttons {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center; }
 
 .address-form {
   width: 40%;
@@ -15,35 +13,27 @@
   border: 1px solid #ccc;
   border-radius: 15px;
   background-color: #f9f9f9;
-  margin-bottom: 350px;
-}
+  margin-bottom: 350px; }
 
 .input-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-}
-.input-container .address-input input.invalid-input {
-  border-bottom: 1px solid red;
-  border-top: 1px solid red;
-}
-.input-container .address-input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-.input-container .address-input label {
-  font-weight: lighter;
-}
-.input-container .address-input input {
-  border-style: none;
-  margin-left: 20px;
-}
-.input-container .address-input .red-text {
-  font-size: 15px;
-}
-.input-container .address-input .address-input input[type=text]:hover {
-  cursor: pointer;
-}
+  justify-content: center; }
+  .input-container .address-input input.invalid-input {
+    border-bottom: 1px solid red;
+    border-top: 1px solid red; }
+  .input-container .address-input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px; }
+    .input-container .address-input label {
+      font-weight: lighter; }
+    .input-container .address-input input {
+      border-style: none;
+      margin-left: 20px; }
+    .input-container .address-input .red-text {
+      font-size: 15px; }
+    .input-container .address-input .address-input input[type="text"]:hover {
+      cursor: pointer; }
 
 /*# sourceMappingURL=AddAddress.css.map */
