--- a/client/src/css/RegisterPage.css
+++ b/client/src/css/RegisterPage.css
@@ -1,14 +1,12 @@
 .register-head-container {
   position: fixed;
-  padding-top: 0;
-}
+  padding-top: 0; }
 
 .register-container {
   display: flex;
   justify-content: center;
   padding-top: 150px;
-  padding-bottom: 100px;
-}
+  padding-bottom: 100px; }
 
 .register-page-box {
   width: 700px;
@@ -20,45 +18,39 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
 
-.register-container input[type=text],
-.register-container input[type=email],
-.register-container input[type=password] {
+.register-container input[type="text"],
+.register-container input[type="email"],
+.register-container input[type="password"] {
   border-color: white;
   border-radius: 0;
   border-style: outset;
   height: 20px;
-  width: 250px;
-}
+  width: 250px; }
 
 .register-page-box > h1 {
   font-family: Times New Roman, Serif, serif;
   font-weight: bold;
   font-size: 24px;
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .register-form {
   display: flex;
-  flex-direction: row;
-}
+  flex-direction: row; }
 
 .error-message {
   text-align: left;
   font-size: 14px;
   color: red;
-  padding: 10px;
-}
+  padding: 10px; }
 
 .password-error-container div {
   text-align: left;
   font-size: 15px;
   color: red;
-  padding: 5px;
-}
+  padding: 5px; }
 
 .register-buttons > button {
   background-color: #ccb1a7;
@@ -66,8 +58,7 @@
   font-family: Times New Roman, Serif, serif;
   font-size: 16px;
   padding: 5px 7px;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
 
 .submit-btn {
   background-color: #ccb1a7;
@@ -75,30 +66,25 @@
   font-family: Times New Roman, Serif, serif;
   font-size: 16px;
   padding: 5px 7px;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
 
 .submit-btn:hover {
   background-color: #A26D5D;
   border-color: #363131;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .logout {
-  margin-bottom: 30px;
-}
+  margin-bottom: 30px; }
 
 .register-btn-container {
   position: absolute;
   bottom: 20px;
-  left: 20px;
-}
+  left: 20px; }
 
 .submit-btn-container {
   position: absolute;
   bottom: 25px;
-  right: 20px;
-}
+  right: 20px; }
 
 .select-profile-image {
   display: flex;
@@ -107,40 +93,33 @@
   bottom: 0;
   left: 0;
   margin-bottom: 80px;
-  margin-left: 40px;
-}
+  margin-left: 40px; }
 
 .select-profile-image > label {
   font-size: 16px;
-  font-family: Times New Roman, Serif, serif;
-}
+  font-family: Times New Roman, Serif, serif; }
 
 .register-section1 > label,
 .register-section2 > label {
   font-size: 16px;
-  font-family: Times New Roman, Serif, serif;
-}
+  font-family: Times New Roman, Serif, serif; }
 
 .register-section1 {
-  padding-right: 40px;
-}
+  padding-right: 40px; }
 
 .register-section2 {
-  padding-left: 40px;
-}
+  padding-left: 40px; }
 
 .register-section1,
 .register-section2 {
   padding: 50px;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .vl {
-  border-left: 3px solid rgba(212, 199, 199, 0.7607843137);
+  border-left: 3px solid #d4c7c7c2;
   height: 360px;
   left: 50%;
   margin-left: -3px;
-  top: 0;
-}
+  top: 0; }
 
 /*# sourceMappingURL=RegisterPage.css.map */
