--- a/client/src/Admin.scss
+++ b/client/src/Admin.scss
@@ -60,6 +60,7 @@ body {
   border-radius: 5px;
   margin-left: 20px;
   margin-bottom: 400px;
+  margin-top:80px;
 
   .admin-table-container table {
     width: 100%;
