--- a/client/src/css/AddAddress.css
+++ b/client/src/css/AddAddress.css
@@ -1,8 +1,8 @@
-.address-container {
+.create-address {
   display: flex;
   flex-direction: column;
   align-items: center; }
-  .address-container .buttons {
+  .create-address .buttons {
     display: flex;
     flex-direction: row-reverse;
     justify-content: center; }
@@ -15,25 +15,22 @@
   background-color: #f9f9f9;
   margin-bottom: 350px; }
 
-.input-container {
+.address-input-container {
   display: flex;
   flex-direction: row;
   justify-content: center; }
-  .input-container .address-input input.invalid-input {
-    border-bottom: 1px solid red;
-    border-top: 1px solid red; }
-  .input-container .address-input {
+  .address-input-container .address-input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px; }
-    .input-container .address-input label {
+    .address-input-container .address-input label {
       font-weight: lighter; }
-    .input-container .address-input input {
+    .address-input-container .address-input input {
       border-style: none;
       margin-left: 20px; }
-    .input-container .address-input .red-text {
+    .address-input-container .address-input .red-text {
       font-size: 15px; }
-    .input-container .address-input .address-input input[type="text"]:hover {
+    .address-input-container .address-input .address-input input[type="text"]:hover {
       cursor: pointer; }
 
 /*# sourceMappingURL=AddAddress.css.map */
